chore: refactor session storage
